--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/antd": "^1.0.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.21",
@@ -15,10 +16,9 @@
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
-    "@types/redux-form": "^8.3.3",
     "@types/redux-thunk": "^2.1.0",
+    "antd": "^4.18.7",
     "axios": "^0.25.0",
-    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -26,7 +26,6 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "redux-form": "^8.3.8",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
