--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
