--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -21,6 +21,10 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src/**/*",
+    "./globals.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
