--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
