--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,14 @@
   "name": "messenger",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "start": "nodemon app.js",
-    "dev": "nodemon app.js"
+    "tsc": "tsc",
+    "watch-tsc": "tsc -w",
+    "deploy": "node dist/src/server.js",
+    "watch-deploy": "nodemon dist/src/server.js",
+    "server": "npm run watch-tsc\" \"npm run watch-deploy\"",
+    "start": "npm run deploy"
   },
   "author": "",
   "license": "ISC",
@@ -17,12 +21,21 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
     "pg": "^8.7.1",
-    "socket.io": "^4.4.1",
-    "yarn": "^1.22.19"
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@tsconfig/node16": "^1.0.3",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^17.0.42",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.8.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.3"
   }
 }
