--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.42",
     "@types/pg": "^8.6.5",
+    "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
