--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "tsc": "tsc",
     "watch-tsc": "tsc -w",
-    "deploy": "node dist/src/server.js",
-    "watch-deploy": "nodemon dist/src/server.js",
-    "server": "npm run watch-tsc\" \"npm run watch-deploy\"",
+    "deploy": "node dist/src/app.js",
+    "watch-deploy": "nodemon dist/src/app.js",
+    "server": "concurrently \"npm run watch-tsc\" \"npm run watch-deploy\"",
     "start": "npm run deploy"
   },
   "author": "",
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
+    "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.2",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/config": "^0.0.41",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
