--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^5.27.1",
     "concurrently": "^7.2.1",
     "eslint": "^8.17.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.8.1",
     "tslint": "^6.1.3",
